[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-vantage-mcp"
version = "0.2.0"
authors = [
  { name="berlinbra", email="BMBpsn@gmail.com" },
]
description = "MCP Server for Alpha Vantage API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "mcp",
    "numpy>=1.26.0",
    "pandas>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]
